--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -34,7 +34,7 @@
                 android:layout_margin="20px"
                 android:ems="10"
                 android:hint="Age"
-                android:inputType="textPersonName" />
+                android:inputType="number" />
 
             <TextView
                 android:id="@+id/textView3"
@@ -43,13 +43,18 @@
                 android:layout_margin="50px"
                 android:text="Gender"
                 android:textSize="30sp" />
-
+            <RadioGroup
+                android:orientation="vertical"
+                android:id="@+id/rgi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                >
             <RadioButton
                 android:id="@+id/radioButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="20px"
-                android:text="Male" />
+                android:text="MALE" />
 
             <RadioButton
                 android:id="@+id/radioButton2"
@@ -57,13 +62,12 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="20px"
                 android:text="FEMALE" />
-
+</RadioGroup>
             <Button
                 android:id="@+id/button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="50px"
-                android:onClick="gotonext"
                 android:text="NEXT" />
 
         </LinearLayout>
